# boilerpy

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
speed_blueprint/: cli.py  generator.py  templates.py
speed_blueprint/template_files/fastapi/api/: .env.example  README.md
speed_blueprint/template_files/fastapi/api/app/: __init__.py  main.py
speed_blueprint/template_files/fastapi/api/app/api/v1/: router.py
speed_blueprint/template_files/fastapi/api/app/core/: config.py
speed_blueprint/template_files/fastapi/auth/: .env.example  README.md  requirements.txt
speed_blueprint/template_files/fastapi/auth/app/api/v1/: router.py
speed_blueprint/template_files/fastapi/auth/app/core/: config.py  dependencies.py  security.py
speed_blueprint/template_files/fastapi/auth/app/schemas/: token.py  user.py
speed_blueprint/template_files/fastapi/sql/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  requirements.txt
speed_blueprint/template_files/fastapi/sql/alembic/: env.py
speed_blueprint/template_files/fastapi/sql/app/: main.py
speed_blueprint/template_files/fastapi/sql/app/api/v1/: router.py
speed_blueprint/template_files/fastapi/sql/app/core/: config.py  database.py
speed_blueprint/template_files/fastapi/sql/app/crud/: item.py
speed_blueprint/template_files/fastapi/sql/app/db/: init_db.py
speed_blueprint/template_files/fastapi/sql/app/models/: __init__.py  base.py  item.py
speed_blueprint/template_files/fastapi/sql/app/schemas/: item.py
(+5 files in other folders)
